Commented out "requires junit" from module-info.java in order to try jlink